--- a/15.HtmlDOm/index.html
+++ b/15.HtmlDOm/index.html
@@ -7,12 +7,13 @@
 
 </head>
 
-<body>
+<body id="body">
     <h1 id="header">Hi, I Am Aakrity.</h1>
     <form>
         <input type="text" id="name">
         <button type="submit" id="btn">submit</button>
     </form </body>
     <script src="index.js"></script>
+</body>
 
 </html>
